--- a/22691261_HaXuanPhu_Tuan07/src/main/resources/application.properties
+++ b/22691261_HaXuanPhu_Tuan07/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=22691261_HaXuanPhu_Tuan07
+server.port=8080
+spring.devtools.add-properties=false
+logging.level.web=debug
+
+# = Database Configuration
+spring.datasource.url=jdbc:mariadb://localhost:3307/shoppingdb
+spring.datasource.username=root
+spring.datasource.password=sa
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# = JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+spring.sql.init.platform=mariadb
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+# = thymeleaf Config
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
