--- a/22691261_HaXuanPhu_SpringAI/src/main/resources/application.properties
+++ b/22691261_HaXuanPhu_SpringAI/src/main/resources/application.properties
@@ -20,3 +20,12 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# Spring AI OpenAI Configuration
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.chat.options.model=gpt-4
+spring.ai.openai.chat.options.temperature=0.7
+
+# Ho?c s? d?ng Ollama (local)
+#spring.ai.ollama.base-url=http://localhost:11434
+#spring.ai.ollama.chat.options.model=llama2
